Must make destinction between 'File' URLs and 'Web' URLs. Only the latter are URI compatible.